--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,8 @@
 [buildout]
 develop = .
 parts = interpreter test
-extends = http://svn.zope.org/*checkout*/groktoolkit/trunk/grok.cfg
+extends = https://raw.github.com/zopefoundation/groktoolkit/master/grok.cfg
+versions = versions
 
 [versions]
 grokcore.layout =
@@ -15,4 +16,3 @@ interpreter = python
 recipe = zc.recipe.testrunner
 eggs = grokcore.layout [test]
 defaults = ['--tests-pattern', '^f?tests$', '-v', '-c', '--package=grokcore.layout']
-
