--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,8 @@
 [buildout]
+extends =
+  https://raw.githubusercontent.com/zopefoundation/groktoolkit/resurrection-python3/grok.cfg
 develop = .
 parts = interpreter test
-extends = https://raw.github.com/zopefoundation/groktoolkit/master/grok.cfg
 versions = versions
 
 [versions]
