Add coverage to tox, fixup buildout

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-__pycache__
-.coverage
+*.pyc
+.coverage*
 .installed.cfg
 .mr.developer.cfg
 .tox
-*.pyc
+__pycache__
 bin
 dev
 develop-eggs
-parts
+lib/
+parts/
+pip-selfcheck.json
+pyvenv.cfg
 src/*.egg-info
