--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,9 +11,9 @@ grokcore.layout =
 [interpreter]
 recipe = zc.recipe.egg
 eggs = grokcore.layout
-interpreter = python
+interpreter = py
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = grokcore.layout [test]
-defaults = ['--tests-pattern', '^f?tests$', '-v', '-c', '--package=grokcore.layout']
+defaults = ['-v', '-c']
