--- a/.meta.toml
+++ b/.meta.toml
@@ -2,7 +2,7 @@
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [meta]
 template = "pure-python"
-commit-id = "13207dce4ea1a51f579fedbf1b41b30fb60d4216"
+commit-id = "d4e8550e4a37df10866d376fceac4e91689df8c5"
 
 [python]
 with-pypy = true
@@ -19,4 +19,14 @@ additional-config = [
     "# F401 imported but unused",
     "per-file-ignores =",
     "    src/grokcore/layout/__init__.py: F401",
+    ]
+
+[tox]
+use-flake8 = true
+
+[manifest]
+additional-rules = [
+    "recursive-include src *.pt",
+    "recursive-include src *.txt",
+    "recursive-include src *.zcml",
     ]
