--- a/.meta.toml
+++ b/.meta.toml
@@ -27,6 +27,6 @@ use-flake8 = true
 [manifest]
 additional-rules = [
     "recursive-include src *.pt",
-    "recursive-include src *.txt",
+    "recursive-include src *.rst",
     "recursive-include src *.zcml",
     ]
