--- a/.meta.toml
+++ b/.meta.toml
@@ -2,7 +2,7 @@
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [meta]
 template = "pure-python"
-commit-id = "fd874ae4"
+commit-id = "c6354ebd"
 
 [python]
 with-pypy = true
@@ -10,6 +10,7 @@ with-sphinx-doctests = false
 with-windows = false
 with-future-python = false
 with-macos = false
+with-docs = false
 
 [coverage]
 fail-under = 95
@@ -20,9 +21,6 @@ additional-config = [
     "per-file-ignores =",
     "    src/grokcore/layout/__init__.py: F401",
     ]
-
-[tox]
-use-flake8 = true
 
 [manifest]
 additional-rules = [
